<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layBase">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/ic_nba"
            android:id="@+id/ivFlag"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/tvFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivFlag"
            app:layout_constraintTop_toTopOf="@+id/ivFlag"
            tools:text="@string/full_name" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWin"
            tools:text="@string/number_of_wins"
            app:layout_constraintStart_toEndOf="@+id/ivWins"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ivWins"
            app:layout_constraintBottom_toBottomOf="@+id/ivWins"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLosses"
            tools:text="@string/number_of_losses"
            app:layout_constraintStart_toEndOf="@+id/ivLosses"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ivLosses"
            app:layout_constraintBottom_toBottomOf="@+id/ivLosses"/>
    <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp" app:srcCompat="@drawable/ic_win"
            android:id="@+id/ivWins"
            app:layout_constraintStart_toStartOf="@+id/tvFullName"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName" android:tint="@color/color_wins"/>
    <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp" app:srcCompat="@drawable/ic_loss"
            android:id="@+id/ivLosses" app:layout_constraintStart_toStartOf="@+id/tvFullName"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/ivWins"
            android:tint="@color/color_losses"/>
    <TextView
            android:text="@string/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLabelWins" app:layout_constraintStart_toEndOf="@+id/tvWin" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tvWin"/>
    <TextView
            android:text="@string/losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLabelLoss" app:layout_constraintStart_toEndOf="@+id/tvLosses"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tvLosses"/>
</androidx.constraintlayout.widget.ConstraintLayout>