<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.DetailTeamActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.DetailTeamActivity">

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp" app:srcCompat="@drawable/ic_nba"
                android:id="@+id/tvTeamFlag" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTeamName"
                app:layout_constraintTop_toBottomOf="@+id/tvTeamFlag" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" tools:text="Team name" android:textStyle="bold" android:gravity="center"
                android:textSize="16sp"/>

        <View
                android:id="@+id/tvBar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" tools:text="Team name" android:textStyle="bold"
                android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/players"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvLabelPlayers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textStyle="bold"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/tvBar"
                android:layout_marginLeft="10dp" android:layout_marginStart="10dp"/>

        <View
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" tools:text="Team name" android:textStyle="bold"
                android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/tvLabelPlayers"
                android:layout_marginTop="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTeamName" android:id="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                android:gravity="center">

            <ImageView
                    android:layout_width="@dimen/icon_win_loss_size"
                    android:layout_height="@dimen/icon_win_loss_size"
                    android:src="@drawable/ic_win"
                    android:tint="@color/color_wins"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWins"
                    tools:text="@string/number_of_wins"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLabelWins"
                    android:layout_marginLeft="4dp"
                    android:text="@string/wins"/>

            <ImageView
                    android:layout_width="@dimen/icon_win_loss_size"
                    android:layout_height="@dimen/icon_win_loss_size"
                    android:src="@drawable/ic_loss"
                    android:layout_marginLeft="8dp"
                    android:tint="@color/color_losses"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLosses"
                    tools:text="@string/number_of_losses"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLabelLosses"
                    android:layout_marginLeft="4dp"
                    android:text="@string/losses"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_margin="8dp"
    />
</LinearLayout>